[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prometheus-eval"
version = "0.1.13"
description = "A package for evaluating the performance of language model with Prometheus"
readme = "README.md"
authors = [
  { name = "Juyoung Suk", email = "juyoung@kaist.ac.kr" },
  { name = "Seungone Kim", email = "seungone@cmu.edu" },
]
requires-python = ">=3.10"
dependencies = [
  "fastchat>=0.1.0"
]

[project.optional-dependencies]
modal = ["modal==0.62.198"]
vllm = ["vllm>=0.4.3"]

[tool.setuptools.packages.find]
where = ["."]
