[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prometheus-eval"
version = "0.1.13"
description = "A package for evaluating the performance of language model with Prometheus"
readme = "README.md"
authors = [
  { name = "Juyoung Suk", email = "juyoung@kaist.ac.kr" },
  { name = "Seungone Kim", email = "seungone@cmu.edu" },
]
requires-python = ">=3.10"

[project.optional-dependencies]
default = ["fastchat>=0.1.0", "loguru>=0.7.2", "tqdm>=4.66.4"]

ollama = ["prometheus-eval[default]", "requests>=2.32.3"]

modal = ["prometheus-eval[default]", "asyncio", "modal==0.63.13"]

vllm = ["prometheus-eval[default]", "vllm>=0.4.3"]

[tool.setuptools.packages.find]
where = ["."]
